# semester2_lab2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp
Algorithm/: Algorithm.h  Array.h  Dict.h
ConsoleUI/: Menu.cpp  Menu.h  Navigation.cpp  Navigation.h  Options.cpp  Options.h  State.h
Options/: allOptions.h  menuSectionCodes.h
Options/Main/: mainCBs.h  mainItems.h  mainOptions.h
Options/Settings/: settingsCBs.h  settingsItems.h  settingsOptions.h
Test/: Cases.h  Test.h
Util/: ConsoleState.h  Input.h  UserFile.h
